# rw-test

./: .ignore  Cargo.toml  README.md
.github/workflows/: ci_workflow.yaml  ci_workflow.yml  gh_pages.yml  test.yml
day_1/: README.md
day_1/hello-clippy/: Cargo.toml
day_1/hello-clippy/src/: lib.rs
day_2/: README.md
day_2/methods/: Cargo.toml
day_2/methods/src/: lib.rs
day_3/: README.md
day_3/digit_sum/: Cargo.toml
day_3/digit_sum/src/: lib.rs
day_3/pangram/: Cargo.toml
day_3/pangram/src/: lib.rs
day_3/pangram/tests/: pangram.rs
day_4/: README.md
day_4/badlib/: Cargo.toml
day_4/badlib/src/: lib.rs
day_4/shippable/: Cargo.toml
day_4/shippable/src/: main.rs
day_5/shippable/: Cargo.toml
day_5/shippable/src/: main.rs
docs/: index.html  paekli-web-55510099fc8620d0.js  paekli-web-55510099fc8620d0_bg.wasm  paekli-web-94051f590bdf3195.js  paekli-web-94051f590bdf3195_bg.wasm  paekli-web-9bd59d445d5b337f.js  paekli-web-9bd59d445d5b337f_bg.wasm
final_project/paekli-cli/: Cargo.toml
final_project/paekli-cli/src/: main.rs
final_project/paekli-core/: Cargo.toml
final_project/paekli-http/: Cargo.toml
final_project/paekli-http/src/: main.rs
final_project/paekli-web/: Cargo.toml
final_project/paekli-web/src/: main.rs
paekli-cli/: Cargo.toml
paekli-core/: Cargo.toml
paekli-core/src/store/: http_client.rs
paekli-http/: Cargo.toml
paekli-http/src/: main.rs
paekli-py/: Cargo.toml
paekli-web/: Cargo.toml
paekli-web/src/: main.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs
(+7 files in other folders)
