[package]
name = "paekli-web"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
codee = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
leptos = { version = "0.6.9", features = ["csr"] }
leptos-use = "0.13.0"
paekli-core = { version = "0.1.0", path = "../paekli-core" }
